@@ -17,7 +17,7 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 
 plugins {
     id 'java-library'
-    id 'nullaway.jacoco-conventions'
+    id 'nullaway.java-test-conventions'
 }
 
 configurations {
@@ -62,7 +62,6 @@ dependencies {
     testImplementation deps.test.grpcCore
     testImplementation project(":test-java-lib-lombok")
     testImplementation deps.test.mockito
-    testImplementation deps.test.mockitoInline
     testImplementation deps.test.javaxAnnotationApi
     testImplementation deps.test.assertJ
 }
@@ -73,22 +72,6 @@ javadoc {
 
 
 test {
-    maxHeapSize = "1024m"
-    // to expose necessary JDK types on JDK 16+; see https://errorprone.info/docs/installation#java-9-and-newer
-    jvmArgs += [
-        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-        // Accessed by Lombok tests
-        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-    ]
     if (deps.versions.errorProneApi == "2.4.0" && JavaVersion.current() >= JavaVersion.VERSION_17) {
         // This test does not pass on JDK 17 with Error Prone 2.4.0 due to a Mockito incompatibility.  Skip it (the
         // test passes with more recent Error Prone versions on JDK 17)
@@ -142,11 +125,22 @@ def jdk8Test = tasks.register("testJdk8", Test) {
     filter {
         // JDK 8 does not support diamonds on anonymous classes
         excludeTestsMatching "com.uber.nullaway.NullAwayJSpecifyGenericsTests.overrideDiamondAnonymousClass"
+        // tests cannot run on JDK 8 since Mockito version no longer supports it
+        excludeTestsMatching "com.uber.nullaway.NullAwaySerializationTest.initializationError"
+        excludeTestsMatching "com.uber.nullaway.handlers.contract.ContractUtilsTest.getEmptyAntecedent"
     }
 }
 
 tasks.named('check').configure {
     dependsOn(jdk8Test)
+}
+
+tasks.named('testJdk21', Test).configure {
+    filter {
+        // JSpecify Generics tests do not yet pass on JDK 21
+        // See https://github.com/uber/NullAway/issues/827
+        excludeTestsMatching "com.uber.nullaway.NullAwayJSpecifyGenericsTests"
+    }
 }
 
 // Create a task to build NullAway with NullAway checking enabled
